--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,7 +98,7 @@ services:
       KAFKA_BROKERS: kafka:9092
     networks:
       - cinemaabyss-network
-
+      
   # Proxy Service (API Gateway)
   proxy-service:
     build:
@@ -108,7 +108,7 @@ services:
     depends_on:
       - monolith
       - movies-service
-      - events-service
+      #- events-service
     ports:
       - "8000:8000"
     environment:
