--- a/src/kubernetes/ingress.yaml
+++ b/src/kubernetes/ingress.yaml
@@ -11,8 +11,16 @@ spec:
     - host: cinemaabyss.example.com
       http:
         paths:
-          #дополните конфигурацию для /
-          ...
+          # ВСЁ идет через proxy-service
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: proxy-service
+                port:
+                  number: 8000
+          
+          # И отдельно events для тестов
           - path: /api/events
             pathType: Prefix
             backend:
